[gd_scene load_steps=8 format=3 uid="uid://jbbdoamiq2bd"]

[ext_resource type="Script" path="res://script/met_dx.gd" id="1_2pkum"]
[ext_resource type="Texture2D" uid="uid://b4ied36c6md5w" path="res://assets/GFX/Enemies/MetDX.png" id="1_ksoer"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jce44"]
size = Vector2(18, 11)

[sub_resource type="Animation" id="Animation_neu0g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_b42nk"]
resource_name = "attack"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.8, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"shoot"
}, {
"args": [],
"method": &"move"
}]
}

[sub_resource type="Animation" id="Animation_y2qw2"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2b047"]
_data = {
"RESET": SubResource("Animation_neu0g"),
"attack": SubResource("Animation_b42nk"),
"idle": SubResource("Animation_y2qw2")
}

[node name="MetDX" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_2pkum")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_jce44")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_jce44")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
position = Vector2(8.9407e-08, 2.5)
scale = Vector2(0.9, 0.55)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ksoer")
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_2b047")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Label" type="Label" parent="."]
offset_left = 16.0
offset_top = -27.0
offset_right = 56.0
offset_bottom = -4.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
